{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 23,
  "lineage": "0472b0dc-d9ac-77a8-53eb-3af3d6f1fb2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691277437046:internet-gateway/igw-07918a5b49aa99c59",
            "id": "igw-07918a5b49aa99c59",
            "owner_id": "691277437046",
            "vpc_id": "vpc-0b2262ac0f0f34522"
          },
          "dependencies": [
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691277437046:route-table/rtb-06a32f99136941bd7",
            "id": "rtb-06a32f99136941bd7",
            "owner_id": "691277437046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07918a5b49aa99c59",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2262ac0f0f34522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0877c7e90f77c5a06",
            "route_table_id": "rtb-06a32f99136941bd7",
            "subnet_id": "subnet-03fca1dd9650743f0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.sna",
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8a772fcab390faf",
            "route_table_id": "rtb-06a32f99136941bd7",
            "subnet_id": "subnet-0b55957594350ecfc"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.snb",
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691277437046:security-group/sg-029fdf9e477e9818a",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029fdf9e477e9818a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "691277437046",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2262ac0f0f34522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sna",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691277437046:subnet/subnet-03fca1dd9650743f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fca1dd9650743f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "691277437046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sna"
            },
            "tags_all": {
              "Name": "sna"
            },
            "vpc_id": "vpc-0b2262ac0f0f34522"
          },
          "dependencies": [
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691277437046:subnet/subnet-0b55957594350ecfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b55957594350ecfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "691277437046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snb"
            },
            "tags_all": {
              "Name": "snb"
            },
            "vpc_id": "vpc-0b2262ac0f0f34522"
          },
          "dependencies": [
            "aws_vpc.capitalbetting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capitalbetting_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691277437046:vpc/vpc-0b2262ac0f0f34522",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d2c8b09d7a0d8c8",
            "default_route_table_id": "rtb-01237f86e3f039b7c",
            "default_security_group_id": "sg-01097b2f0f2683d98",
            "dhcp_options_id": "dopt-036e577817d9ccf47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2262ac0f0f34522",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01237f86e3f039b7c",
            "owner_id": "691277437046",
            "tags": {
              "Name": "capitalbetting_vpc"
            },
            "tags_all": {
              "Name": "capitalbetting_vpc"
            }
          }
        }
      ]
    }
  ]
}